remove most of the section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="swiper mt-10 h-full">
             <div class="swiper-wrapper">
               <!-- Slide 1: Secondary Focus (Team) -->
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div
                   class="grid lg:grid-cols-2 gap-12 items-center max-w-6xl mx-auto"
                 >
@@ -194,7 +194,6 @@
                     </div>
                   </div>
 
-                  <!-- Image container (Mimicking the visual style provided) -->
 
                   <div
                     class="lg:flex justify-center"
@@ -218,7 +217,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Slide 2: Secondary Focus (Team) -->
               <div class="swiper-slide">
@@ -233,9 +232,8 @@
                       <span class="text-gradient">Elite Advisory</span>
                     </h1>
                     <p class="text-lg text-slate-300 mb-8">
-                      Access former Fortune 500 sales leaders and operating
-                      partners dedicated solely to optimizing your revenue
-                      model.
+                      Access operating partners solely dedicated to multiplying
+                      your client acquisition and revenue model.
                     </p>
 
                     <div class="flex mt-4 space-x-3">
@@ -244,11 +242,11 @@
                         class="px-5 py-2.5 shadow-md shadow-gray-500 bg-amber-500 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-700 transition"
                         >Meet Our Experts</a
                       >
-                      <a
+                      <!-- <a
                         href="#booking-links"
                         class="px-5 py-2.5 shadow-md shadow-gray-500 bg-slate-600 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-700 transition"
                         >Strategy Session</a
-                      >
+                      > -->
                     </div>
                   </div>
 
@@ -313,11 +311,11 @@
                       class="px-5 py-2.5 shadow-md shadow-gray-600 bg-amber-500 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-600 transition"
                       >Get Started</a
                     >
-                    <a
+                    <!-- <a
                       href="#booking-links"
                       class="px-5 py-2.5 shadow-md shadow-gray-600 bg-slate-500 text-white rounded-[3rem] font-bold text-sm hover:bg-slate-400 transition"
                       >Free trial</a
-                    >
+                    > -->
                   </div>
                 </div>
               </div>
@@ -334,9 +332,9 @@
                   data-aos-delay="100"
                 >
                   <i class="fas fa-cubes text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">Consistent Uplift</p>
+                  <p class="text-xl font-bold text-white">Consistent Growth</p>
                   <p class="text-sm text-slate-400">
-                    Driving consistent increases in satisfaction rate.
+                    Making consistent adjustments to optimize revenue.
                   </p>
                 </div>
                 <div
@@ -345,9 +343,9 @@
                   data-aos-delay="200"
                 >
                   <i class="fas fa-chart-area text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">Accelerated Value</p>
+                  <p class="text-xl font-bold text-white">Accelerated cycle</p>
                   <p class="text-sm text-slate-400">
-                    Achieving faster time-to-value delivery for clients.
+                    streamlining and enhancing the sales process.
                   </p>
                 </div>
                 <div
@@ -356,7 +354,7 @@
                   data-aos-delay="300"
                 >
                   <i class="fas fa-microchip text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">AI-Powered</p>
+                  <p class="text-xl font-bold text-white">Analytics Powered</p>
                   <p class="text-sm text-slate-400">
                     Pinpointing pipeline friction points.
                   </p>
@@ -367,9 +365,9 @@
                   data-aos-delay="400"
                 >
                   <i class="fas fa-sitemap text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">RevOps Model</p>
+                  <p class="text-xl font-bold text-white">Closing Competence</p>
                   <p class="text-sm text-slate-400">
-                    Unified revenue operations structure.
+                    The difference between a "closed" and a "Lost"
                   </p>
                 </div>
               </div>
@@ -387,11 +385,11 @@
           <div class="new-banner-container">
             <div class="text-center mb-12">
               <h2 class="text-4xl font-extrabold text-amber-500 mb-4">
-                Discover our journey and what drives us
+                The Foundation
               </h2>
               <p class="text-lg text-slate-300 max-w-3xl mx-auto">
-                Founded by data experts, we create cutting-edge SaaS analytics
-                platforms tailored for businesses of all sizes.
+                Founded by a multi-industry sales specialist with a knack for
+                sourcing the best revenue producing methods in B2B sales.
               </p>
             </div>
 
@@ -418,19 +416,16 @@
 
             <div class="text-center pt-6 max-w-4xl mx-auto">
               <p class="text-lg text-slate-300 italic">
-                Our foundation is built on
-                <span class="font-medium text-amber-500"
-                  >decades of collective experience</span
-                >
-                leading Fortune 500 sales floors and managing Private Equity
-                operating roles. We deliver
+                We deliver
                 <span class="font-medium text-amber-500"
                   >predictable, repeatable revenue streams</span
                 >
                 by combining deep operational expertise with cutting-edge
-                analytical tools. Our commitment is to drive verifiable value,
-                ensuring secure, efficient, and sustained growth for every
-                client partnership.
+                analytical tools. Our commitment is to
+                <span class="font-medium text-amber-500">
+                  drive verifiable value, ensuring secure, efficient,
+                </span>
+                and sustained growth for every client partnership.
               </p>
             </div>
 
@@ -439,12 +434,12 @@
               data-aos="fade-up"
               data-aos-delay="500"
             >
-              <h3
+              <!-- <h3
                 class="text-3xl font-extrabold text-white max-w-4xl mx-auto leading-normal"
               >
                 We are passionate about empowering individuals and businesses to
                 take control of their finances
-              </h3>
+              </h3> -->
             </div>
           </div>
         </div>
@@ -464,7 +459,7 @@
                 Our Value Proposition
               </p>
               <h2 class="text-5xl font-extrabold text-white mb-6 leading-tight">
-                Sales Advisory is
+                Sales Advisory as
                 <span class="text-gradient">Embedded Growth</span>.
               </h2>
               <p class="text-lg text-slate-300">
@@ -494,7 +489,7 @@
               >
                 <i class="fas fa-link text-xl text-amber-500 mb-2"></i>
                 <p class="text-sm font-bold text-white">
-                  Custom Go-to-Market Strategy
+                  Custom Outbound Strategy
                 </p>
               </div>
               <div
@@ -504,7 +499,7 @@
               >
                 <i class="fas fa-book-open text-xl text-amber-500 mb-2"></i>
                 <p class="text-sm font-bold text-white">
-                  Detailed Sales Playbooks & Training
+                  Comprehensive Sales Training
                 </p>
               </div>
 
@@ -517,7 +512,7 @@
                   class="fas fa-money-check-alt text-xl text-amber-500 mb-2"
                 ></i>
                 <p class="text-sm font-bold text-white">
-                  Compensation & Incentive Modeling
+                  MOF & BOF Optimization
                 </p>
               </div>
 
@@ -528,7 +523,7 @@
               >
                 <i class="fas fa-search-plus text-xl text-amber-500 mb-2"></i>
                 <p class="text-sm font-bold text-white">
-                  CRM Audit and Optimization
+                  Data Collection and Auditing
                 </p>
               </div>
             </div>
@@ -536,7 +531,7 @@
         </div>
       </section>
 
-      <section
+      <!-- <section
         class="py-10 border-y border-slate-700 bg-slate-900"
         data-aos="fade-up"
       >
@@ -587,9 +582,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section
+      <!-- <section
         id="impact"
         class="relative py-20 bg-slate-800"
         data-aos="fade-up"
@@ -624,7 +619,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="relative py-16 bg-slate-900" data-aos="fade-up">
         <div class="container mx-auto px-6 text-center max-w-4xl">
@@ -637,7 +632,7 @@
             current sales funnel.
           </p>
           <a
-            href="#contact"
+            href="https://cal.com/chrismichael/30min"
             class="px-5 py-2.5 bg-amber-500 shadow-md shadow-gray-500 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-600 transition"
           >
             Take the Free Sales Assessment
@@ -645,7 +640,7 @@
         </div>
       </section>
 
-      <section
+      <!-- <section
         id="methodology"
         class="relative py-24 bg-slate-800"
         data-aos="fade-up"
@@ -704,9 +699,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="relative py-16 bg-slate-900" data-aos="fade-up">
+      <!-- <section class="relative py-16 bg-slate-900" data-aos="fade-up">
         <div
           class="container mx-auto px-6 flex flex-col md:flex-row items-center justify-between gap-8"
         >
@@ -735,7 +730,7 @@
             />
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section
         id="about"
@@ -757,19 +752,19 @@
               data-aos-delay="100"
             >
               <img
-                src="https://images.unsplash.com/photo-1580489944761-15a19d654956?q=80&w=150&h=150&auto=format&fit=crop"
+                src="/assets/chris.jpg"
                 alt="John Doe"
                 class="rounded-full w-24 h-24 mx-auto mb-4 object-cover border-4 border-amber-500/50 shadow-lg"
               />
-              <h4 class="text-xl font-semibold text-white">John Doe</h4>
+              <h4 class="text-xl font-semibold text-white">Chris Michael</h4>
               <p class="text-amber-500 text-sm font-medium mb-2">
-                Chief Strategy Officer
+                Founder & Lead Consultant
               </p>
               <p class="text-slate-400 text-xs">
-                Ex-VP Sales, GlobalTech. 20+ years.
+                <!-- Ex-VP Sales, GlobalTech. 20+ years. -->
               </p>
             </div>
-            <div
+            <!-- <div
               class="text-center p-6 bg-slate-900 rounded-xl shadow-lg border border-slate-700"
               data-aos="fade-up"
               data-aos-delay="200"
@@ -822,12 +817,12 @@
               <p class="text-slate-400 text-xs">
                 M&A and financial modeling focus.
               </p>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
 
-      <section class="relative py-16 bg-slate-900" data-aos="fade-up">
+      <!-- <section class="relative py-16 bg-slate-900" data-aos="fade-up">
         <div class="container mx-auto px-6 text-center max-w-4xl">
           <h2 class="text-3xl md:text-4xl font-extrabold text-white mb-6">
             Ready to launch your next growth phase?
@@ -839,9 +834,9 @@
             Get Your Customized Plan
           </a>
         </div>
-      </section>
+      </section> -->
 
-      <section
+      <!-- <section
         id="booking-links"
         class="relative py-24 bg-slate-900"
         data-aos="fade-up"
@@ -927,7 +922,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section
         id="contact"
