--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             >About Us</a
           >
           <a
-            href="#impact"
+            href="#what-we-do"
             class="nav-link text-slate-300 hover:text-amber-500 transition"
             >Impact</a
           >
@@ -109,7 +109,7 @@
           >About Us</a
         >
         <a
-          href="#impact"
+          href="#what-we-do"
           class="nav-link block py-3 text-white hover:text-amber-500 transition border-b border-slate-700"
           >Impact</a
         >
