--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
             class="text-4xl font-bold text-white mb-12 text-center"
             data-aos="fade-up"
           >
-            Our Elite Team & Vision
+            The Team
           </h2>
 
           <div class="grid md:grid-cols-4 gap-8 max-w-6xl mx-auto">
