--- a/index.html
+++ b/index.html
@@ -282,21 +282,21 @@
               >
                 <img
                   src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=800&auto=format&fit=cover"
-                  alt="Business people collaborating"
+                  alt="Team"
                   class="w-full h-auto object-cover"
-                  onerror="this.onerror=null;this.src='https://placehold.co/800x400/475569/94a3b8?text=Team+Collaboration';"
                 />
                 <div
-                  class="absolute pt-[30px] inset-0 bg-slate-900/40 p-8 flex flex-col justify-end"
+                  class="absolute inset-0 bg-slate-900/40 p-8 flex flex-col justify-end"
                 >
-                  <h3 class="text-3xl font-extrabold text-white mb-2">
+                  <h3
+                    class="text-2xl md:text-3xl font-extrabold text-white mb-2"
+                  >
                     Build & Growth with Scalable Tools
                   </h3>
-
-                  <div class="flex mt-4 space-x-3">
+                  <div class="flex mt-4">
                     <a
-                      href="https://cal.com/chrismichael/30min"
-                      class="px-5 py-2.5 shadow-md shadow-gray-600 bg-amber-500 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-600 transition"
+                      href="#"
+                      class="px-5 py-2.5 shadow-md shadow-gray-60 bg-amber-500 text-white rounded-full font-bold text-sm"
                       >Book a Call</a
                     >
                   </div>
@@ -304,60 +304,52 @@
               </div>
 
               <div
-                class="grid grid-cols-1 min-[360px]:grid-cols-2 gap-6"
+                class="grid grid-cols-1 min-[380px]:grid-cols-2 gap-4 md:gap-6"
                 data-aos="fade-left"
               >
                 <h2
-                  class="col-span-1 min-[360px]:col-span-2 text-4xl font-extrabold text-white mb-2 leading-tight"
+                  class="col-span-1 min-[380px]:col-span-2 text-3xl md:text-4xl font-extrabold text-white mb-2 leading-tight"
                 >
                   Our Strategic Framework
                 </h2>
                 <!-- Block 1 -->
                 <div
-                  class="p-6 bg-slate-900 rounded-2xl shadow-lg shadow-gray-500 border border-slate-700 text-center"
-                  data-aos="zoom-in"
-                  data-aos-delay="100"
+                  class="p-4 bg-slate-900 rounded-2xl shadow-lg shadow-gray-500 border border-slate-700 text-center"
                 >
-                  <i class="fas fa-cubes text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">Consistent growth</p>
-                  <p class="text-sm text-slate-400">
-                    Making consistent adjustments to optimize revenue.
+                  <i class="fas fa-cubes text-2xl text-amber-500 mb-2"></i>
+                  <p class="text-lg font-bold text-white">Consistent growth</p>
+                  <p class="text-xs text-slate-400">
+                    Optimizing revenue adjustments.
                   </p>
                 </div>
                 <!-- Block 2 -->
                 <div
-                  class="p-6 bg-slate-900 rounded-2xl shadow-lg shadow-gray-500 border border-slate-700 text-center"
-                  data-aos="zoom-in"
-                  data-aos-delay="200"
+                  class="p-4 bg-slate-900 rounded-2xl shadow-lg shadow-gray-500 border border-slate-700 text-center"
                 >
-                  <i class="fas fa-chart-area text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">Accelerated cycle</p>
-                  <p class="text-sm text-slate-400">
-                    Streamlining and enhancing the sales process.
+                  <i class="fas fa-chart-area text-2xl text-amber-500 mb-2"></i>
+                  <p class="text-lg font-bold text-white">Accelerated cycle</p>
+                  <p class="text-xs text-slate-400">
+                    Streamlining sales process.
                   </p>
                 </div>
                 <!-- Block 3 -->
                 <div
-                  class="p-6 bg-slate-900 rounded-2xl shadow-xl shadow-gray-500 border border-slate-700 text-center"
-                  data-aos="zoom-in"
-                  data-aos-delay="300"
+                  class="p-4 bg-slate-900 rounded-2xl shadow-lg shadow-gray-500 border border-slate-700 text-center"
                 >
-                  <i class="fas fa-microchip text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">Analytics powered</p>
-                  <p class="text-sm text-slate-400">
-                    Pinpointing pipeline friction points.
+                  <i class="fas fa-microchip text-2xl text-amber-500 mb-2"></i>
+                  <p class="text-lg font-bold text-white">Analytics powered</p>
+                  <p class="text-xs text-slate-400">
+                    Pinpointing friction points.
                   </p>
                 </div>
                 <!-- Block 4 -->
                 <div
-                  class="p-6 bg-slate-900 rounded-2xl shadow-lg shadow-gray-500 border border-slate-700 text-center"
-                  data-aos="zoom-in"
-                  data-aos-delay="400"
+                  class="p-4 bg-slate-900 rounded-2xl shadow-lg shadow-gray-500 border border-slate-700 text-center"
                 >
-                  <i class="fas fa-sitemap text-3xl text-amber-500 mb-3"></i>
-                  <p class="text-xl font-bold text-white">Closing competence</p>
-                  <p class="text-sm text-slate-400">
-                    The difference between a "closed" and a "Lost"
+                  <i class="fas fa-sitemap text-2xl text-amber-500 mb-2"></i>
+                  <p class="text-lg font-bold text-white">Closing competence</p>
+                  <p class="text-xs text-slate-400">
+                    Winning vs. Losing deals.
                   </p>
                 </div>
               </div>
@@ -365,7 +357,6 @@
           </div>
         </div>
       </section>
-
       <section
         id="discovery"
         class="relative py-24 bg-slate-900"
