chnaged the links

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
   </head>
 
   <body class="antialiased scroll-to-section">
+    <!-- Expiry Notice (Hidden by default) -->
+    <div id="expiry-notice">
+      <h2 class="text-2xl font-bold text-red-600 mb-2">
+        Development Preview Expired
+      </h2>
+      <p class="text-slate-700">
+        Please contact the developer to reactivate this site.
+      </p>
+    </div>
     <header
       class="sticky top-0 z-50 bg-black backdrop-blur-md shadow-xl border-b border-amber-500/30"
     >
@@ -75,7 +84,7 @@
             >Impact</a
           >
           <a
-            href="https://cal.com/chrismichael/30min"
+            href="https://cal.com/chargedconsulting/30min"
             class="nav-link px-4 py-2 bg-gradient-to-r from-amber-500 to-orange-500 text-white rounded-xl font-bold hover:bg-amber-500 scale-200 transition duration-300 shadow-md shadow-amber-500"
             data-page="booking"
             >Book a Call</a
@@ -115,7 +124,7 @@
         >
         <div class="pt-4">
           <a
-            href="https://cal.com/chrismichael/30min"
+            href="https://cal.com/chargedconsulting/30min"
             class="block w-full text-center px-4 py-3 bg-gradient-to-r from-amber-500 to-orange-500 text-white rounded-full font-bold hover:shadow-lg hover:shadow-amber-500/50 transition duration-300 shadow-md shadow-amber-900/20"
             data-page="booking"
           >
@@ -242,7 +251,7 @@
 
                     <div class="flex mt-4 space-x-3">
                       <a
-                        href="https://cal.com/chrismichael/30min"
+                        href="https://cal.com/chargedconsulting/30min"
                         class="px-5 py-2.5 shadow-md shadow-gray-500 bg-amber-500 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-700 transition"
                         >Meet Our Experts</a
                       >
@@ -300,7 +309,7 @@
                   </h3>
                   <div class="flex mt-4">
                     <a
-                      href="https://cal.com/chrismichael/30min"
+                      href="https://cal.com/chargedconsulting/30min"
                       class="px-5 py-2.5 shadow-md shadow-gray-60 bg-amber-500 text-white rounded-full font-bold text-sm"
                       >Book a Call</a
                     >
@@ -362,6 +371,7 @@
           </div>
         </div>
       </section>
+
       <!-- SECTION 3: DISCOVERY -->
       <section
         id="discovery"
@@ -457,7 +467,7 @@
               </p>
               <div class="mt-8">
                 <a
-                  href="https://cal.com/chrismichael/30min"
+                  href="https://cal.com/chargedconsulting/30min"
                   class="px-5 py-2.5 bg-amber-500 shadow-md shadow-gray-500 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-700 transition"
                   >See Our Framework</a
                 >
@@ -531,7 +541,7 @@
             current sales funnel.
           </p>
           <a
-            href="https://cal.com/chrismichael/30min"
+            href="https://cal.com/chargedconsulting/30min"
             class="px-5 py-2.5 bg-amber-500 shadow-md shadow-gray-500 text-white rounded-[3rem] font-bold text-sm hover:bg-amber-600 transition"
           >
             Take the Free Sales Assessment
